<resources>
    <string name="app_name">Stok Kacamata</string>
    <string name="namatoko">Nama Toko</string>
    <string name="datapegawai">Data Pegawai</string>
    <string name="nama">Nama :</string>
    <string name="alamat">Alamat :</string>
    <string name="notelp">No Telp :</string>
    <string name="tempatlahir">Tpt Lahir :</string>
    <string name="tanggallahir">Tgl lahir    :</string>
    <string name="deskripsi">Deskripsi  :</string>
    <string name="password">Password :</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registrasi">Registrasi</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="nama1">Nama</string>
    <string name="alamat1">Alamat</string>
    <string name="notelp1">No Telp</string>
    <string name="tempatlahir1">Tempat Lahir</string>
    <string name="tanggallahir1">Tanggal Lahir</string>
    <string name="deskripsi1">Deskripsi</string>
    <string name="password1">Password</string>
    <string name="sudahdaftar">sudah daftar?</string>
    <string name="belumdaftar">belum daftar?</string>
    <string name="checkDetails">Check Details</string>
    <string name="merk">Merk</string>
    <string name="tipe">Tipe</string>
    <string name="warna">Warna</string>
    <string name="databarang">Data Barang</string>
    <string name="datatransaksi">Data Transaksi</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="barang">Barang</string>
    <string name="searchresult">Search Result</string>
    <string name="search">Search</string>
    <string name="transaksi">Transaksi</string>
    <string name="datatoko">Data Toko</string>
    <string name="deskripsitoko">Deskripsi Toko</string>
    <string name="buattoko">Buat Toko</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="pegawai">Pegawai</string>
    <string name="tambahbarang">Tambah Barang</string>
    <string name="lainnya">Lainnya</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="logintoko">Login Toko</string>
    <string name="pilihtoko">Pilih Toko</string>
    <string name="sample">Sample</string>
    <string name="pembeli">Pembeli</string>
    <string name="scanhere">Scan Here</string>
    <string name="scanagain">SCAN AGAIN</string>
    <string name="generateqrcode">Generate QR Code</string>
    <string name="jumlah">Jumlah</string>
    <string name="loginpegawai">Login Pegawai</string>
    <string name="registation">Registation?</string>
    <string name="loginsebagaipegawai">Login sebagai pegawai</string>
</resources>