<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/profilepegawai1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nama2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama1"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilepegawai1" />

    <TextView
        android:id="@+id/alamat4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alamat1"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama2" />

    <TextView
        android:id="@+id/notelp4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notelp1"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alamat4" />

    <TextView
        android:id="@+id/tempatlahir3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tempatlahir1"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notelp4" />

    <TextView
        android:id="@+id/tanggallahir3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tanggallahir1"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempatlahir3" />

    <TextView
        android:id="@+id/deskripsi9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi1"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tanggallahir3" />

    <TextView
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password1"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deskripsi9" />

</androidx.constraintlayout.widget.ConstraintLayout>