<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PilihToko">

    <ImageView
        android:id="@+id/btnLogout4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download5" />

    <EditText
        android:id="@+id/namatoko2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:hint="@string/namatoko"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/namatoko4"
        app:layout_constraintTop_toBottomOf="@+id/pilihtoko" />

    <TextView
        android:id="@+id/namatoko4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Nama Toko :"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pilihtoko" />

    <TextView
        android:id="@+id/pilihtoko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pilihtoko"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/garisdatapegawai4" />

    <ImageView
        android:id="@+id/logoAplikasi9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tampilan" />

    <TextView
        android:id="@+id/textNamaToko8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/app_name"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logoAplikasi9"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/garisdatapegawai4"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoAplikasi9" />

    <Button
        android:id="@+id/buttonlogintoko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/zxing_custom_viewfinder_laser"
        android:text="@string/logintoko"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namatoko2" />

    <Button
        android:id="@+id/buttonbuatintoko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/zxing_custom_viewfinder_laser"
        android:text="@string/buattoko"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namatoko2" />
</androidx.constraintlayout.widget.ConstraintLayout>