<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPegawai">

    <TextView
        android:id="@+id/StokKacamata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="30dp"
        android:text="@string/app_name"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LogoAplikasi"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/LogoAplikasi"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tampilan" />

    <TextView
        android:id="@+id/TextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/loginpegawai"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoAplikasi" />

    <EditText
        android:id="@+id/TextNama2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:hint="@string/nama1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextLogin" />

    <EditText
        android:id="@+id/TextPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:hint="@string/password1"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextNama2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ButtonSubmit4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/TextPassword2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/zxing_custom_viewfinder_laser"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPassword2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/login1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!--
    <Button
        android:id="@+id/ButtonSubmit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:text="Submit"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPassword2" />
-->
    <!--
    <TextView
        android:id="@+id/belumdaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/belumdaftar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonSubmit2" />
-->
</androidx.constraintlayout.widget.ConstraintLayout>